# PersonalityGeneratorRust

./: Cargo.toml  README.md  讨论.txt
benches/: parameter_benchmarks.rs
examples/: attack_test.rs  collision_test.rs  deep_test.rs  demo.rs  extreme_test.rs  kind_person.json  stress_test.rs
output/: profile_ai.json  profile_ai.md  profile_raw.json  profile_text.txt
output/batch/ai/: profile_0001.md  profile_0002.md  profile_0003.md  profile_0004.md  profile_0005.md  profile_0006.md  profile_0007.md  profile_0008.md  profile_0009.md  profile_0010.md  profile_0011.md  profile_0012.md  profile_0013.md  profile_0014.md  profile_0015.md  profile_0016.md  profile_0017.md  profile_0018.md  profile_0019.md  profile_0020.md  profile_0021.md  profile_0022.md  profile_0023.md  profile_0024.md  profile_0025.md  profile_0026.md  profile_0027.md  profile_0028.md  profile_0029.md  profile_0030.md  profile_0031.md  profile_0032.md  profile_0033.md  profile_0034.md  profile_0035.md  profile_0036.md  profile_0037.md  profile_0038.md  profile_0039.md  profile_0040.md
output/batch/human/: profile_0001.md  profile_0002.md  profile_0003.md  profile_0004.md  profile_0005.md  profile_0006.md  profile_0007.md  profile_0008.md  profile_0009.md  profile_0010.md  profile_0011.md  profile_0012.md  profile_0013.md  profile_0014.md  profile_0015.md  profile_0016.md  profile_0017.md  profile_0018.md  profile_0019.md  profile_0020.md  profile_0021.md  profile_0022.md  profile_0023.md  profile_0024.md  profile_0025.md  profile_0026.md  (+14 more)
output/profiles/: profile_1.md  profile_10.md  profile_11.md  profile_12.md  profile_13.md  profile_14.md  profile_15.md  profile_16.md  profile_17.md  profile_18.md  profile_19.md  profile_2.md  profile_20.md  profile_3.md  profile_4.md  profile_5.md  profile_6.md  profile_7.md  profile_8.md  profile_9.md
src/: ffi.rs  generator.rs  lib.rs  params.rs  seed.rs  textify.rs
src/api/: mod.rs
src/core/: mod.rs
src/coupling/: mod.rs
src/dynamics/: mod.rs
src/epsilon/: mod.rs
src/ffi/: mod.rs
src/parameters/: domain_a.rs  domain_b.rs  domain_c.rs  domain_d.rs  domain_e.rs  domain_f.rs  domain_g.rs  domain_h.rs  mod.rs
src/relationship/: mod.rs
src/wasm/: mod.rs
(+40 files in other folders)
