[package]
name = "personality_generator"
version = "0.1.0"
edition = "2021"
description = "人格原子参数系统 (PAPS) —— 无原型·纯参数·全光谱"
license = "MIT"

[dependencies]

[lib]
name = "personality_generator"
path = "src/lib.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "stress_test"
path = "examples/stress_test.rs"

[[example]]
name = "collision_test"
path = "examples/collision_test.rs"

[[example]]
name = "extreme_test"
path = "examples/extreme_test.rs"

[[example]]
name = "deep_test"
path = "examples/deep_test.rs"

[[example]]
name = "attack_test"
path = "examples/attack_test.rs"
